termine la parte de la seccion principal

--- a/layouts/potreroDigital_proyecto_grupo17_PROYEC.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_PROYEC.HTML
@@ -161,59 +161,63 @@
       <a href="NOTICIAeco8.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
       </div>
   </div>
-  
-          <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
-          <div class="card-body">
-            <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
-            </button></h1></a>
-          <p class="card-text">"</p>
-          <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+
+  <div class="card" style="width: 18rem;">
+      <img src="IMAGENES/politica/noticia11.jpg" height="190px" class="card-img-top" alt="...">
+      <div class="card-body">
+          <a href="noticiapol11.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La política exterior Argentina 2020: cuando se creía tener todas las respuestas, se cambiaron todas las preguntas">
+          La política exterior Argentina 2020: cuando se creía tener todas las respuestas, se cambiaron todas las preguntas
+          </button></h1> </a>
+      <p class="card-text">Más allá de mala relación durante el pasado período K</p>
+      <a href="noticiapol11.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
-    </div>
+  </div>
 
-    <div class="card" style="width: 18rem;">
-                <img src="" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
-                  </button></h1> </a>
-                <p class="card-text"></p>
-                <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
-          </div>
 
-          </div>
-              <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
-              <div class="card-body">
-                <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
-                </button></h1></a>
+  <div class="card" style="width: 18rem;">
+      <img src="IMAGENES/politica/noticia8.jpg" height="190px" class="card-img-top" alt="...">
+      <div class="card-body">
+          <a href="noticiapol8.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="El miedo a las mujeres en la política">
+          El miedo a las mujeres en la política
+          </button></h1></a>
+      <p class="card-text">Partamos de un hecho: si el mundo, la política</p>
+      <a href="noticiapol8.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
+      </div>
+  </div>
 
-              <p class="card-text"><br></p>
-              <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
-          </div>
-
-          </div>
-              <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
-              <div class="card-body">
-                <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
-                </button></h1> </a>
-              <p class="card-text"></p>
-              <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
-          </div>
-
-          </div>
-              <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
-              <div class="card-body">
-                <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
-                </button></h1></a>
-              <p class="card-text">"</p>
-              <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
-          </div>
-
+  <div class="card" style="width: 18rem;">
+        <img src="IMAGENES/SALUD/noticia1.jpg" height="190px" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="noticiasal1.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Situación COVID-19 en Tucumán">
+            Situación COVID-19 en Tucumán
+          </button></h1> </a>
+        <p class="card-text">El Ministerio de Salud Pública informa que se</p>
+        <a href="noticiasal1.html" class="btn btn-outline-primary btn-block">Ver mas</a>
         </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+      <img src="IMAGENES/SALUD/noticia6.jpg" height="190px" class="card-img-top" alt="...">
+      <div class="card-body">
+          <a href="noticiasal6.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Qué es el hipertiroidismo y a quiénes afecta">
+          Qué es el hipertiroidismo y a quiénes afecta
+          </button></h1></a>
+      <p class="card-text">La jefa de la unidad de Patología Glandular del </p>
+      <a href="noticiasal6.html" class="btn btn-outline-primary btn-block">Ver mas</a>
+      </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+      <img src="IMAGENES/entretenimiento/noticia8.jpg" height="190px" class="card-img-top" alt="...">
+      <div class="card-body">
+          <a href="noticiaent8.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Estos son los streamers de Twitch mejor pagados del mundo">
+          Estos son los streamers de Twitch mejor pagados del mundo
+          </button></h1></a>
+      <p class="card-text">De los streamers de habla hispana, el mejor pagado de </p>
+      <a href="noticiaent8.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
+      </div>
+  </div>
 
 </main>
 
